test/errors/type/io/open3.yasl
let f = io.open(1, true)
